# UltraIRCd

./: .gitignore  BUILDING.md  CMakeLists.txt  DEVELOPMENT.md  INSTALL.md  Makefile.in  NEWS.md  README.md  aclocal.m4  conanfile.py  config.h.in  configure  configure.ac  pyproject.toml
.github/workflows/: ci.yml  coverity.yml  irctest-ci.yml
cmake/: EscapeXMLToC.cmake  FindJansson.cmake  generate_schema.py
doc/: CMakeLists.txt  Makefile.in  index.txt  ircd.8  kline.txt  reference.ircd.conf  resv.txt  serverhide.txt
etc/: ircd.xsd
help/: CMakeLists.txt  Makefile.in  umode
libio/: CMakeLists.txt  Makefile.in
libio/src/: Makefile.am  Makefile.in  address.c  address.h  base32.h  comm.c  comm.h  comm_epoll.c  comm_kqueue.c  comm_poll.c  dbuf.c  dbuf.h  event.c  event.h  fdlist.c  fdlist.h  hook.c  hook.h  ident.c  ident.h  io.h  io_getopt.c  io_getopt.h  io_pidfile.c  io_pidfile.h  io_rlimit.c  io_rlimit.h  io_signal.c  io_signal.h  io_string.c  io_string.h  io_time.c  io_time.h  irc_string.c  irc_string.h  list.c  list.h  log.c  log.h  match.c  (+20 more)
libltdl/: CMakeLists.txt  Makefile.am  Makefile.in
m4/: ax_arg_enable_debugging.m4  ax_arg_enable_warnings.m4  ax_library_jansson.m4  ax_library_net.m4
modules/: CMakeLists.txt  Makefile.in  cap_account_notify.c  cap_away_notify.c  cap_cap_notify.c  cap_chghost.c  cap_extended_join.c  cap_invite_notify.c  cap_multi_prefix.c  cap_userhost_in_names.c  m_accept.c  m_admin.c  m_away.c  m_bmask.c  m_cap.c  m_capab.c  m_certfp.c  m_close.c  m_connect.c  m_die.c  m_dline.c  m_encap.c  m_eob.c  m_error.c  m_etrace.c  m_globops.c  m_hash.c  m_help.c  m_info.c  m_invite.c  m_ison.c  m_join.c  m_kick.c  m_kill.c  m_kline.c  m_knock.c  m_links.c  m_list.c  m_locops.c  m_lusers.c  (+81 more)
src/: CMakeLists.txt  Makefile.am  Makefile.in  accept.c  accept.h  aline.c  aline.h  auth.c  auth.h  cap.c  cap.h  channel.c  channel.h  channel_invite.c  channel_invite.h  channel_mode.c  channel_mode.h  client.c  client.h  client_svstag.c  client_svstag.h  cloak.c  cloak.h  command.c  command.h  conf.c  conf.h  conf_class.c  conf_class.h  conf_cluster.c  conf_cluster.h  conf_db.c  conf_db.h  conf_gecos.c  conf_gecos.h  conf_lexer.c  conf_lexer.l  conf_parser.c  conf_parser.h  conf_parser.y  (+78 more)
tools/: CMakeLists.txt  Makefile.in  generate_xsd_docs.py
