# Install help files
install(FILES
    unkline
    unresv
    unxline
    user
    userhost
    version
    who
    whois
    whowas
    xline
    accept
    admin
    away
    close
    cmode
    connect
    die
    dline
    etrace
    extban
    hash
    help
    index
    info
    invite
    ison
    join
    kick
    kill
    kline
    knock
    links
    list
    locops
    lusers
    map
    module
    monitor
    motd
    names
    nick
    notice
    oper
    part
    pass
    ping
    pong
    post
    privmsg
    quit
    rehash
    restart
    resv
    set
    squit
    stats
    time
    topic
    trace
    umode
    undline
    DESTINATION ${CMAKE_INSTALL_DATADIR}/ircd-hybrid/help
) 